--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-github-corner": "^2.3.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-tilt": "^0.1.4",
+    "react-typing-animation": "^1.6.2",
+    "typed.js": "^2.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
