--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cheerio": "^1.0.0-rc.3",
     "gh-pages": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "node-cron": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
