--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "cheerio": "^1.0.0-rc.3",
     "gh-pages": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "node-cron": "^2.0.3",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-github-corner": "^2.3.0",
     "react-icons": "^3.9.0",
