--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
- *.* linguist-language=Javascript
+*.java linguist-detectable=false
+ *.js linguist-detectable=true
+ *.html linguist-detectable=false
+ *.xml linguist-detectable=false
