--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-*.java linguist-detectable=false
- *.js linguist-detectable=true
- *.html linguist-detectable=false
- *.xml linguist-detectable=false
+*.* linguist-language=Javascript
